--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					<ul class="nav navbar-nav cl-effect-7">
 						<li class="active"><a href="index.html" class="page-scroll">Home</a></li>
 						<li><a href="#about" class="page-scroll">Sobre</a></li>
-						<li><a href="#service" class="page-scroll">Serviços</a></li>	
+						<!-- <li><a href="#service" class="page-scroll">Serviços</a></li>	 -->
 						<li><a href="#gallery" class="page-scroll">Portifólio</a></li>
 						<!-- <li><a href="#team" class="page-scroll">Equipe</a></li> -->
 						<li><a href="#contact" class="page-scroll">Contato</a></li>
@@ -136,7 +136,7 @@
 <!-- /divider -->
 <!---728x90--->
 <!-- services -->
-<section class="service-agileinfo" id="service">
+<!-- <section class="service-agileinfo" id="service">
 	<div class="container">
 		<h3 class="text-center" data-aos="zoom-in">Nossos Serviços</h3>
 		<div class="col-lg-4 col-md-4 col-sm-6" data-aos="flip-down">
@@ -156,7 +156,7 @@
 		</div>
 		<div class="clearfix"></div>
 	</div>
-</section>
+</section> -->
 <!-- /services -->
 <!-- gallery -->
 <section class="gallery-info" id="gallery">
